# forest_fire_simulation

./: CMakeLists.txt  README.md  automat.cpp  automat.h  file_dialog.cpp  file_dialog.h  image.cpp  image.h  image_path.txt  main.cpp
